// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<DomainFieldLabel/> label and helpTip 1`] = `
<div>
  <span>
    Field 
    <span
      class="domain-no-wrap"
    >
      Label
      <div
        class="overlay-trigger"
      >
        <span
          class="label-help-target"
        >
          <span
            class="label-help-icon fa fa-question-circle"
          />
        </span>
      </div>
    </span>
  </span>
</div>
`;

exports[`<DomainFieldLabel/> label and required 1`] = `
<div>
  <span>
    Field 
    <span
      class="domain-no-wrap"
    >
      Label
       *
    </span>
  </span>
</div>
`;

exports[`<DomainFieldLabel/> label only 1`] = `
<div>
  <span>
    Field 
    <span
      class="domain-no-wrap"
    >
      Label
    </span>
  </span>
</div>
`;

exports[`<DomainFieldLabel/> label, required, and helpTip 1`] = `
<div>
  <span>
    Field 
    <span
      class="domain-no-wrap"
    >
      Label
      <div
        class="overlay-trigger"
      >
        <span
          class="label-help-target"
        >
          <span
            class="label-help-icon fa fa-question-circle"
          />
        </span>
      </div>
       *
    </span>
  </span>
</div>
`;
